Ｓａｍｐｌｅに足りないもの、要らないものについて追加、削除

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: ./docker/api/Dockerfile
     container_name: sample_2024-api
     volumes:
-      - ./sample_2024-api:/var/www/html
+      - ./api:/var/www/html
       # - api_storage:/var/www/html/storage
       # - api_modules:/var/www/html/vendor
       # - api_cache:/var/www/html/bootstrap/cache
